--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 app.layout.00001strid=en
-app.layout.00002strid=demo [DEFAULT]
-app.layout.00003strid=Welcome [DEFAULT]
+app.layout.00002strid=demo [DEFAULT en_GB]
+app.layout.00003strid=Welcome [DEFAULT en_GB]
 
 app.view.index.00001strid=Welcome to
-app.view.index.00002strid=Spring with Thymeleaf [DEFAULT].
+app.view.index.00002strid=Spring with Thymeleaf [DEFAULT en_GB].
